--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -24,6 +24,17 @@
     background: #fff;
     -webkit-box-shadow: 2px 0 30px #0001;
     box-shadow: 2px 0 30px #0001;
+    background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%) !important;
+}
+
+.bg-info {
+    background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%) !important;
+}
+
+.sidebar .text,
+.sidebar i,
+.sidebar p {
+    color: white !important;
 }
 
 .sidebar .logo {
@@ -197,6 +208,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    border-bottom: 1px solid #ddd;
 }
 
 .navbar.full-width {
@@ -211,7 +223,7 @@
 }
 
 .navbar .menu {
-    flex: 1;
+    /* flex: 1; */
     display: flex;
     -webkit-justify-content: flex-end;
     justify-content: flex-end;
