--- a/user/css/navbar.css
+++ b/user/css/navbar.css
@@ -10,6 +10,7 @@
     width: 100%;
     background: transparent;
     box-shadow: 0 0 2px #000a;
+    border-bottom: 1px solid #ddd;
 }
 
 .navbar-light .navbar-brand {
