--- a/user/css/responsive.css
+++ b/user/css/responsive.css
@@ -31,7 +31,9 @@
          overflow-x: hidden !important;
      }
 
-
+     .dashboard-container .action-buttons {
+         bottom: 20px;
+     }
  }
 
  /* Desktop Styles */
