--- a/css/user/styles.css
+++ b/css/user/styles.css
@@ -177,3 +177,7 @@ select.form-control:not([size]):not([multiple]) {
     color: #747681;
     font-weight: normal;
 }
+
+.modal-header {
+    background-color: var(--webMainColor) !important;
+}
