--- a/user/css/responsive.css
+++ b/user/css/responsive.css
@@ -51,6 +51,23 @@
      .invoice-items-container .services-header {
          overflow-x: auto;
      }
+
+     .profile-header .pull-away {
+         flex-direction: column;
+         align-items: start;
+     }
+
+     .profile-header .pull-away button {
+         margin-top: 15px;
+         width: 100%;
+     }
+
+     .customer-note-tinymce .btn {
+         position: unset !important;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+     }
  }
 
  /* Desktop Styles */
